# positron

./: .gitignore  .oxlintrc.json  .prettierignore  Cargo.toml  Dockerfile  README.md  backend.Dockerfile  deno.json  devenv.nix  docker-compose.yml  nginx.conf  package-lock.json  package.json  renovate.json  todo  vite.config.js
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: app-release.yml  auto-merge-release.yml  checks.yml  create-release.yml  helm-chart-bump.yml  release-trigger.yml  release.yml  tests.yml
app/: justfile  package.json  pubspec.yaml  svelte.config.js  vite.config.js
app/e2e/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
app/lib/: main.dart  router.dart
app/src/: app.html  vitest-setup.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: auth.rs  deep_link.rs  lib.rs  notes.rs  setup.rs  store.rs  updater.rs  user.rs
app/src-tauri/src/api/: auth.rs  mod.rs  notes.rs  user.rs
app/src-tauri/src/notes/: commands.rs  connection.rs  mod.rs  preview.rs  storage.rs
app/test/: widget_test.dart
app/web/: index.html
backend/: Cargo.toml  Dockerfile  Dockerfile.Dev
backend/entity/: Cargo.toml
backend/entity/src/entities/: apod.rs  group.rs  group_user.rs  invalid_jwt.rs  key.rs  mod.rs  note.rs  note_snapshot.rs  note_user.rs  o_auth_client.rs  o_auth_client_additional_redirect_uri.rs  o_auth_client_group.rs  o_auth_client_o_auth_scope.rs  o_auth_client_user.rs  o_auth_policy.rs  o_auth_policy_content.rs  o_auth_scope.rs  o_auth_scope_o_auth_policy.rs  passkey.rs  prelude.rs  sea_orm_active_enums.rs  session.rs  settings.rs  user.rs  user_settings.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_permission_type.rs  m20241204_191651_create_key_table.rs  m20241204_191705_create_user_table.rs  m20241204_191710_create_passkey_table.rs  m20241204_191716_create_group_table.rs  m20241204_195924_create_oauth_client_table.rs  m20241204_195934_create_oauth_scope_table.rs  m20241204_195941_create_oauth_policy_table.rs  m20241209_084022_create_apod_table.rs  m20250412_072549_add_oauth_confidential.rs  m20250415_162623_add_settings.rs  m20250415_162623_user_settings.rs  m20260507_102052_user_ext.rs  m20260507_135801_group_ext.rs  m20260605_071137_oauth_client_pkce.rs  m20260611_120000_create_note_table.rs  m20260616_120000_note_user_access.rs  m20260618_120000_note_public_share.rs  m20260620_055816_note_snapshots.rs  m20260622_123434_create_session_table.rs  m20260622_145232_drop_invalid_jwt_table.rs  m20260625_134247_note_last_updated.rs
backend/src/: config.rs  cors.rs  error.rs  frontend.rs  lib.rs  logging.rs  macros.rs  main.rs  permission.rs  permissions.rs  settings.rs  setup.rs  templates.rs  user.rs  utils.rs  well_known.rs
backend/src/account/: general.rs  mod.rs  settings.rs
backend/src/auth/: app.rs  config.rs  jwt.rs  logout.rs  mod.rs  passkey.rs  password.rs  refresh.rs  session_auth.rs  state.rs  totp.rs
backend/src/cli/: apod.rs  group.rs  mod.rs  oauth_client.rs  oauth_policy.rs  oauth_scope.rs
backend/src/db/: mod.rs  notes.rs
backend/src/db/notes/: mod.rs  snapshot.rs
backend/src/db/oauth/: oauth_client.rs  oauth_policy.rs  oauth_scope.rs
backend/src/db/services/: apod.rs
backend/src/db/tables/: group.rs  invalid_jwt.rs  key.rs  mod.rs  oauth_client.rs  passkey.rs  user.rs  util.rs
backend/src/db/tables/oauth/: mod.rs  oauth_client.rs  oauth_policy.rs  oauth_scope.rs
backend/src/db/tables/services/: apod.rs
backend/src/db/tables/user/: group.rs  mod.rs  passkey.rs  settings.rs  user.rs
backend/src/db/user/: group.rs  mod.rs  passkey.rs  session.rs  settings.rs  user.rs  user_ext.rs
backend/src/email/: manage.rs  mod.rs  state.rs  templates.rs
backend/src/management/: group.rs  mod.rs  oauth_client.rs  oauth_policy.rs  oauth_scope.rs  state.rs  user.rs
backend/src/notes/: management.rs  mod.rs  preview.rs  snapshot.rs  state.rs  update.rs  websocket.rs
backend/src/oauth/: auth.rs  client_auth.rs  config.rs  jwk.rs  jwt.rs  mod.rs  scope.rs  state.rs  token.rs  user.rs
backend/src/oauth_management/: client.rs  mod.rs  policy.rs  scope.rs
backend/src/s3/: apod.rs  error.rs  mod.rs
backend/src/s3/folders/: apod.rs  mod.rs
backend/src/services/: apod.rs  mod.rs  state.rs
backend/src/storage/: apod.rs  mod.rs  note_snapshot.rs
backend/src/user/: account.rs  info.rs  management.rs  mod.rs  sessions.rs
backend/src/ws/: mod.rs  state.rs  updater.rs
backend/tests/: common.rs  discovery.rs  mfa.rs  notes.rs  oauth_management.rs  services.rs  sessions.rs  setup_auth.rs
frontend/: .gitignore  Dockerfile  Dockerfile.Dev  openapi-ts.config.ts  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  service-worker.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
kubernetes/: network-policy.yaml  secrets.yaml
positron-backend/: Cargo.toml  Dockerfile
positron-backend/src/: cors.rs  error.rs  main.rs  permissions.rs  test.rs  utils.rs
positron-backend/src/account/: general.rs  mod.rs  permissions.rs
positron-backend/src/auth/: jwt.rs  mod.rs  passkey.rs  password.rs  state.rs  totp.rs
positron-backend/src/db/: mod.rs
positron-backend/src/db/tables/: group.rs  invalid_jwt.rs  mod.rs  oauth_client.rs  passkey.rs  user.rs
positron-backend/src/email/: manage.rs  mod.rs  state.rs  templates.rs
positron-backend/src/management/: user.rs
positron-backend/src/oauth/: adapter.rs  auth.rs  mod.rs  scope.rs  state.rs  token.rs  user.rs
positron-backend/src/oauth/handler/: authorizer.rs  issuer.rs  mod.rs  registrar.rs
positron-backend/src/oauth_old/: adapter.rs  auth.rs  error.rs  mod.rs  state.rs  token.rs
positron-backend/src/oauth_old/handler/: issuer.rs
src/: app.css  app.html
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/routes/: +layout.svelte  +page.svelte
(+594 files in other folders)
