[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
aide = { version = "0.16.0-alpha.4", features = [
  "axum",
  "axum-extra",
  "axum-extra-cookie",
  "axum-extra-headers",
  "axum-json",
  "axum-query",
  "axum-tokio",
  "axum-ws",
  "macros"
] }
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.129.0", features = ["behavior-version-latest"] }
async-nats = "0.48.0"
axum = { version = "0.8.9", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
centaurus = { version = "0.11.2", features = [
  "fix-migrations",
  "uuid",
  "webauthn"
] }
chrono = { version = "0.4.44", default-features = false, features = [
  "serde",
  "std"
] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
entity = { path = "entity" }
figment = { version = "0.10.19", features = ["env"] }
futures = "0.3.32"
http = "1.4.0"
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
  "webp"
] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lettre = { version = "0.11.21", default-features = false, features = [
  "builder",
  "ring",
  "rustls",
  "rustls-native-certs",
  "smtp-transport"
] }
migration = { path = "migration" }
openssl = { version = "0.10.79", features = ["vendored"] }
tokio-util = { version = "0.7.18", features = ["io"] }
rand = { version = "0.10.1", default-features = false, features = ["std"] }
reqwest = { version = "0.13.3", features = ["form", "json"] }
rsa = "0.9.10"
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
sea-orm = { version = "1.1.20", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.2", features = ["signal"] }
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth", "qr"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["cors", "trace"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
uuid = "1.23.1"
webauthn-rs = { version = "0.5.5", features = ["conditional-ui"] }
webauthn-rs-proto = "0.5.5"
