[package]
name = "backend"
version = "0.2.13"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
aide = { version = "0.16.0-alpha.4", features = [
  "axum",
  "axum-extra",
  "axum-extra-cookie",
  "axum-extra-headers",
  "axum-json",
  "axum-query",
  "axum-tokio",
  "axum-ws",
  "macros"
] }
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
axum = { version = "0.8.9", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
centaurus = { version = "0.16.0", features = [
  "fix-migrations",
  "uuid",
  "webauthn",
  "storage"
] }
chrono = { version = "0.4.44", default-features = false, features = [
  "serde",
  "std"
] }
clap = { version = "4.6.1", features = ["derive"] }
dashmap = "6.2.1"
dotenvy = "0.15.7"
entity = { path = "entity" }
figment = { version = "0.10.19", features = ["env"] }
futures-util = "0.3.32"
http = "1.4.0"
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
  "webp"
] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
migration = { path = "migration" }
openssl = { version = "0.10.80", features = ["vendored"] }
rand = { version = "0.10.1", default-features = false, features = ["std"] }
reqwest = { version = "0.13.4", features = ["form", "json"] }
rsa = "0.9.10"
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
scraper = "0.27.0"
sea-orm = { version = "1.1.20", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["signal"] }
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth", "qr"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "v7"] }
webauthn-rs = { version = "0.5.5", features = ["conditional-ui"] }
webauthn-rs-proto = "0.5.5"
yrs = { version = "0.27.0", features = ["sync"] }

[features]
test = ["centaurus/test"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.13.4", features = ["form", "json"] }
serde_json = "1.0.150"
base64 = "0.22.1"
rsa = "0.9.10"
uuid = { version = "1.23.1", features = ["v4"] }
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }
