[package]
name = "positron-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22.1"
dotenv = "0.15.0"
rocket = { version = "0.5.1" ,features = ["json", "secrets"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.214", features = ["derive"] }
surrealdb = "2.0.4"
webauthn-rs = { version = "0.5.0", features = ["conditional-ui"] }
webauthn-rs-proto = "0.5.0"
