[package]
name = "positron-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rocket = { version = "0.5.1" ,features = ["json", "secrets"] }
rocket_cors = "0.6.0"
rsa = "0.9.6"
serde = { version = "1.0.214", features = ["derive"] }
surrealdb = "2.0.4"
thiserror = "1.0.66"
totp-rs = "5.6.0"
uuid = "1.11.0"
webauthn-rs = { version = "0.5.0", features = ["conditional-ui"] }
webauthn-rs-proto = "0.5.0"
