[package]
name = "positron"
version = "0.2.5"
description = "Companion app for Positron"
authors = ["Profidev <92174452+Profiidev@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "positron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tokio = "1.52.3"
tauri-plugin-store = "2"
anyhow = "1.0.102"
reqwest = { version = "0.13.4", features = ["form", "json"] }
uuid = { version = "1.23.2", features = ["v4"] }
dashmap = "6.2.1"
