[package]
name = "positron"
version = "0.2.16"
description = "Companion app for Positron"
authors = ["Profidev <92174452+Profiidev@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "positron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
test = ["dep:tauri-plugin-webdriver"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tokio = "1.52.3"
tauri-plugin-store = "2"
anyhow = "1.0.102"
uuid = { version = "1.23.2", features = ["v4"] }
dashmap = "6.2.1"
rand = "0.10.1"
sha2 = "0.11.0"
base64 = "0.22.1"
cookie = "0.18.1"
tauri-plugin-http = { version = "2", features = ["json"] }
tauri-plugin-webdriver = { version = "0.2", optional = true }
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-webpki-roots",
  "url"
] }
futures-util = "0.3.32"
chrono = { version = "0.4.45", features = ["serde"] }
yrs = { version = "0.27.2", features = ["sync"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[dev-dependencies]
http = "=1.4.2"
