[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
centaurus = { version = "0.11.2", default-features = false, features = [
  "avatar",
  "db"
], rev = "7301178c5bfe1511c774e4aa0efc5f0466117845", git = "https://github.com/profiidev/centaurus.git" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "1.1.20"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres" # `DATABASE_DRIVER` feature
]
